# slog

./: CMakeLists.txt  README.md  main.c  main.ui  main.xml  signal_note.c  signal_note.h  w_tarm_ui.c  w_tarm_ui.h  window.c  window.h
